<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditBukuActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            app:cardCornerRadius="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_title_bukuActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="TAMBAH BUKU"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageViewBuku"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_bukuActivity"
                    app:srcCompat="@drawable/book_ilustrasi" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_judul_buku"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:hint="Judul Buku"
                    app:layout_constraintTop_toBottomOf="@id/imageViewBuku">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_judul_buku"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_penerbit_buku"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:hint="Penerbit Buku"
                    app:layout_constraintTop_toBottomOf="@id/layout_judul_buku">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_penerbit_buku"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_tahunTerbit_buku"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:hint="Tahun Tebit Buku"
                    app:layout_constraintTop_toBottomOf="@id/layout_penerbit_buku">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_tahunTebit_buku"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_pengarang_buku"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:hint="Pengarang Buku"
                    app:layout_constraintTop_toBottomOf="@id/layout_tahunTerbit_buku">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_pengarang_buku"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_jumlahHalaman_buku"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:hint="Jumlah Halaman Buku"
                    app:layout_constraintTop_toBottomOf="@id/layout_pengarang_buku">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_jumlahHalaman_buku"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_isbn_buku"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:hint="Nomor ISBN Buku"
                    app:layout_constraintTop_toBottomOf="@id/layout_jumlahHalaman_buku">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_isbn_buku"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords" />

                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:layout_marginVertical="30dp"
                    app:layout_constraintTop_toBottomOf="@+id/layout_isbn_buku"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <Button
                        android:id="@+id/btn_cancel"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Batal"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/btn_save"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Simpan"
                        android:textColor="@color/black" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>